--- a/ApiSandbox.tests/ApiSandbox.tests.csproj
+++ b/ApiSandbox.tests/ApiSandbox.tests.csproj
@@ -19,4 +19,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ApiSandbox\ApiSandbox.csproj" />
+  </ItemGroup>
+
 </Project>
