--- a/ApiSandbox.tests/ApiSandbox.tests.csproj
+++ b/ApiSandbox.tests/ApiSandbox.tests.csproj
@@ -8,10 +8,12 @@
 
   <ItemGroup>
     <None Remove="DataFromOpenWeatherAPI.json" />
+    <None Remove="DataFromOpenWeatherCityAPI.json" />
   </ItemGroup>
 
   <ItemGroup>
     <EmbeddedResource Include="DataFromOpenWeatherAPI.json" />
+    <EmbeddedResource Include="DataFromOpenWeatherCityAPI.json" />
   </ItemGroup>
 
   <ItemGroup>
