--- a/ApiSandbox/ApiSandbox.csproj
+++ b/ApiSandbox/ApiSandbox.csproj
@@ -6,6 +6,8 @@
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DocumentationFile>C:\Projects\ApiSandbox\ApiSandbox\ApiSandbox.xml</DocumentationFile>
+    <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
+    <WarningsAsErrors />
   </PropertyGroup>
 
   <ItemGroup>
