--- a/ApiSandbox/appsettings.json
+++ b/ApiSandbox/appsettings.json
@@ -1,6 +1,8 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-ApiSandbox-205DC6DB-DCFE-4AEA-B5CF-BD1B72712A66;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Database=db6v97ok67hpgg; Host=blabla.eu-west-1.compute.amazonaws.com; Port=5432; User Id=lwjdryuypwnqtx; Password=parola123; SSL Mode=Require;Trust Server Certificate=true",
+    "LocalPostgresConnection": "Server=127.0.0.1;Port=5432;Database=aspNetSandbox-stefan;User Id=postgres;Password=parola123;",
+    "SqlConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-ApiSandbox-205DC6DB-DCFE-4AEA-B5CF-BD1B72712A66;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
