--- a/ApiSandbox/ApiSandbox.csproj
+++ b/ApiSandbox/ApiSandbox.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>C:\Projects\ApiSandbox\ApiSandbox\ApiSandbox.xml</DocumentationFile>
+	  <DocumentationFile>$(OutputPath)$(AssemblyName).xml</DocumentationFile>
     <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
     <WarningsAsErrors />
   </PropertyGroup>
