ConnectionOptions added in program.cs

--- a/ApiSandbox/Properties/launchSettings.json
+++ b/ApiSandbox/Properties/launchSettings.json
@@ -19,7 +19,7 @@
     },
     "ApiSandbox": {
       "commandName": "Project",
-      "commandLineArgs": "-v",
+      "commandLineArgs": "-v- c \"SqlServer\"",
       "launchBrowser": true,
       "launchUrl": "swagger",
       "environmentVariables": {
